Bug 528600 - "Typo in Error Message: The message was sent successfully, but could not be copied to your Sent folder.Would you like to return to the compose window?" [r+sr=Standard8] (Also pushed to force builders to update and hopefully clear red)